# contavetlink

./: .env.development.example  .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  Design.pen  PLAN_DESARROLLO.md  README.md  build.bat  dev.bat  gesdai_exporter.spec  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json  settings.local.json
.claude/hooks/: guard-destructive.js
.github/workflows/: ci.yml  release.yml
app/: __init__.py  config.py  db.py  env.py  logging_config.py
app/exporter/: __init__.py  builder.py  pipeline.py  semaforo.py  suenlace.py
app/io/: __init__.py  csv_handler.py  excel_handler.py
app/mapping/: __init__.py  keywords.py  resolver.py  store.py  sync.py
app/routes/: __init__.py  config_routes.py  export.py  history.py  keywords.py  mappings.py
app/sources/: __init__.py  base.py  dbf_source.py  filtros.py
app/static/: app.css  app.js
app/templates/: base.html  config.html  export.html  historial.html  keywords.html  mappings_articulos.html  mappings_clientes.html
scripts/: add_description_only_invoices.py  build_icon.py  check_dbf_structure.py  fix_decimals_dev_data.py  generate_dev_data.py  link_may_invoices_to_articles.py  run_dev.py
scripts/dev_data_fixes/: add_description_only_invoices.py  fix_decimals_dev_data.py  link_may_invoices_to_articles.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_routes.py
tests/unit/: test_alta_manual.py  test_builder.py  test_dbf_source.py  test_facturas_negativas.py  (+8 more)
updater/: __init__.py  updater.py
(+1 files in other folders)
