[project]
name = "gesdai-exporter"
version = "0.1.0"
description = "Exportador GESDAI → a3ASESOR para COLVET Guadalajara"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: tests que requieren tests/data/DATA_DEV/ (no corren en CI)",
    "validation: tests de formato SUENLACE.DAT contra spec oficial",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/templates/*", "app/static/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
